# introspect

./: CMakeLists.txt  readme.txt
include/introspect/: attrib.h  errors.h  fields.h  fwd.h  inline_list.h  io.h  utils.h  values.h
src/: CMakeLists.txt  errors.cpp  io.cpp  test.cpp  values.cpp
test/: CMakeLists.txt  test.cpp
